--- a/src/main/resources/templates/userflights.html
+++ b/src/main/resources/templates/userflights.html
@@ -27,7 +27,7 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img src="../static/flightimg.jpg">
+                    <img src="../static/flightimg.jpg"/>
                 </div>
                 <div class="content">
                     <a class="header">ToLondon</a>
