--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -5,11 +5,11 @@
 <head>
     <title>Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css"  />
-    <script src="../static/semantic/dist/components/visibility.js" ></script>
-    <script src="../static/semantic/dist/components/sidebar.js" ></script>
-    <script src="../static/semantic/dist/components/transition.js" ></script>
-    <script src="../static/semantic/dist/semantic.min.js" ></script>
+    <link rel="stylesheet" type="text/css" href="../static/semantic/dist/semantic.min.css" th:href="@{/semantic/dist/semantic.min.css}" />
+    <script src="../static/semantic/dist/components/visibility.js" th:src="@{/semantic/dist/components/visibility.js}"></script>
+    <script src="../static/semantic/dist/components/sidebar.js" th:src="@{/semantic/dist/components/sidebar.js}"></script>
+    <script src="../static/semantic/dist/components/transition.js" th:src="@{/semantic/dist/components/transition.js}"></script>
+    <script src="../static/semantic/dist/semantic.min.js" th:src="@{/semantic/dist/semantic.min.js}"></script>
 
     <style>
         .headerslot{
