--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 <div class="wrapper">
     <form class="ui form headerslot field">
@@ -32,7 +32,7 @@
         <div class="ui divided items">
             <div class="item">
                 <div class="image">
-                    <img src="../static/flightimg.jpg"/>
+                    <img src="flightimg.jpg"/>
                 </div>
                 <div class="content">
                     <a class="header">ToSydney</a>
