--- a/src/main/resources/templates/userdata.html
+++ b/src/main/resources/templates/userdata.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <div id="myheader">
-    <script>$('#myheader').load('../static/header.html');</script>
+    <script>$('#myheader').load('header.html');</script>
 </div>
 
 
